<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.pandar</groupId>
    <artifactId>pandar</artifactId>
    <version>1.0.0</version>

    <properties>
        <!-- springboot版本 -->
        <springboot.version>3.1.1</springboot.version>
        <!-- redisson版本 -->
        <redisson.version>3.36.0</redisson.version>
        <!-- mysql驱动版本 -->
        <mysql.version>8.0.33</mysql.version>
        <!-- mybatis-flex版本 -->
        <mybatis-flex.version>1.9.7</mybatis-flex.version>
        <!-- mybatis-flex代码生成 -->
        <mybatis-flex.codegen.version>1.8.3</mybatis-flex.codegen.version>
        <!-- mybatis-flex使用的连接池 -->
        <mybatis-flex.hikariCP.version>4.0.3</mybatis-flex.hikariCP.version>
        <!-- 多数据源 -->
        <dynamic-datasource.version>4.3.1</dynamic-datasource.version>
        <!-- 七牛云 -->
        <qiniu.version>7.18.0</qiniu.version>
        <!-- hutool工具包 -->
        <hutool.version>5.8.32</hutool.version>
        <!-- sa-token -->
        <satoken.version>1.39.0</satoken.version>
        <!-- knife4j -->
        <knife4j.version>4.1.0</knife4j.version>
        <!-- spring-file -->
        <spring-file.version>2.2.1</spring-file.version>
        <!-- mica-xss -->
        <mica-xss.version>3.3.2</mica-xss.version>
        <!-- 缩略图处理 -->
        <thumbnailator.version>0.4.20</thumbnailator.version>
        <!-- webp配合做缩略图处理 -->
        <webp-imageio.version>0.1.6</webp-imageio.version>
        <!-- lombok -->
        <lombok.version>1.18.32</lombok.version>
        <!-- commons-pool2 -->
        <commons-pool2.version>2.11.1</commons-pool2.version>
        <!-- 解析客户端操作系统、浏览器 -->
        <bitwalker.version>1.21</bitwalker.version>
        <!-- 获取系统信息 -->
        <oshi.version>6.8.3</oshi.version>
        <!-- fastjson -->
        <fastjson.version>1.2.83</fastjson.version>
        <!-- java -->
        <java.version>17</java.version>
        <!-- maven.compiler -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- 项目打包名称 -->
        <project.package.name>pandar</project.package.name>
        <!-- 编码 -->
        <project.package.encoding>UTF-8</project.package.encoding>
    </properties>

    <dependencies>
        <!-- web -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${springboot.version}</version>
        </dependency>

        <!-- aop -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
            <version>${springboot.version}</version>
        </dependency>

        <!-- 参数校验 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
            <version>${springboot.version}</version>
        </dependency>

        <!-- swagger-knife4j -->
        <dependency>
            <groupId>com.github.xiaoymin</groupId>
            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
            <version>${knife4j.version}</version>
        </dependency>

        <!-- mysql -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql.version}</version>
        </dependency>

        <!-- lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
        <dependency>
            <groupId>cn.dev33</groupId>
            <artifactId>sa-token-spring-boot3-starter</artifactId>
            <version>${satoken.version}</version>
        </dependency>

        <!-- Sa-Token 整合 Redis （使用 jackson 序列化方式） -->
        <dependency>
            <groupId>cn.dev33</groupId>
            <artifactId>sa-token-redis-jackson</artifactId>
            <version>${satoken.version}</version>
        </dependency>

        <!-- 提供Redis连接池 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
            <version>${commons-pool2.version}</version>
        </dependency>

        <!-- redisson -->
        <dependency>
            <groupId>org.redisson</groupId>
            <artifactId>redisson</artifactId>
            <version>${redisson.version}</version>
        </dependency>

        <!-- hutool工具类 -->
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>${hutool.version}</version>
        </dependency>

        <!-- mica-xss -->
        <dependency>
            <groupId>net.dreamlu</groupId>
            <artifactId>mica-xss</artifactId>
            <version>${mica-xss.version}</version>
        </dependency>

        <!-- 缩略图处理 -->
        <dependency>
            <groupId>net.coobird</groupId>
            <artifactId>thumbnailator</artifactId>
            <version>${thumbnailator.version}</version>
        </dependency>

        <!-- webp-imageio 配合thumbnailator做缩略图处理，不引入回出现No suitable ImageReader found for source data. -->
        <dependency>
            <groupId>org.sejda.imageio</groupId>
            <artifactId>webp-imageio</artifactId>
            <version>${webp-imageio.version}</version>
        </dependency>

        <!-- mybatis-flex -->
        <dependency>
            <groupId>com.mybatis-flex</groupId>
            <artifactId>mybatis-flex-spring-boot3-starter</artifactId>
            <version>${mybatis-flex.version}</version>
        </dependency>

        <!-- mybatis-flex APT服务 -->
        <dependency>
            <groupId>com.mybatis-flex</groupId>
            <artifactId>mybatis-flex-processor</artifactId>
            <version>${mybatis-flex.version}</version>
        </dependency>

        <!-- mybatis-flex 代码生成 -->
        <dependency>
            <groupId>com.mybatis-flex</groupId>
            <artifactId>mybatis-flex-codegen</artifactId>
            <version>${mybatis-flex.codegen.version}</version>
        </dependency>

        <!-- hikariCP连接池 -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${mybatis-flex.hikariCP.version}</version>
        </dependency>

        <!-- 多数据源 -->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
            <version>${dynamic-datasource.version}</version>
        </dependency>

        <!-- 七牛云 -->
        <dependency>
            <groupId>com.qiniu</groupId>
            <artifactId>qiniu-java-sdk</artifactId>
            <version>${qiniu.version}</version>
        </dependency>

        <!-- 解析客户端操作系统、浏览器等 -->
        <dependency>
            <groupId>eu.bitwalker</groupId>
            <artifactId>UserAgentUtils</artifactId>
            <version>${bitwalker.version}</version>
        </dependency>

        <!-- 获取系统信息 -->
        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core</artifactId>
            <version>${oshi.version}</version>
        </dependency>

        <!-- 阿里JSON解析器 -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson.version}</version>
        </dependency>

        <!-- spring-boot-test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${springboot.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- 项目打包名称 -->
        <finalName>${project.package.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <!--创建一个自动可执行的jar或war文件 -->
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- 打包指定启动类 -->
                    <mainClass>com.minimalist.application.MinimalistBasicApplication</mainClass>
                    <!-- 打包时忽略的包 -->
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.package.encoding}</encoding>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <!-- 项目中依赖的包从哪里下载 -->
    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <!-- 项目中所使用的maven插件从哪里下载 -->
    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <profiles>
        <!-- 开发环境配置文件 -->
        <profile>
            <id>dev</id>
            <activation>
                <!--默认激活dev 环境-->
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!-- spring.profiles.active是在application.yml自定义的字段(名字随便起)，自定义字段可以有多个，能对应上就行-->
                <spring.profiles.active>dev</spring.profiles.active>
            </properties>
        </profile>

        <!-- 生产环境配置文件 -->
        <profile>
            <id>prod</id>
            <properties>
                <spring.profiles.active>prod</spring.profiles.active>
            </properties>
        </profile>
    </profiles>
</project>